tests/frontend/pass/staticstore/staticstore.act
contract C

transition f
interface f()

iff in range uint256

    x + y

returns x + y
