tests/frontend/fail/case-fail1.act
contract C

constructor
interface constructor()

creates
   uint x := 0
	
transition bar
interface bar(uint z)

iff
   CALLVALUE == 0

case z == 0:

storage
  x := z

case z >= 2:

storage
  x := z + 1